product code with feign and fault tolerance

--- a/ProductService/src/main/resources/application.properties
+++ b/ProductService/src/main/resources/application.properties
@@ -12,6 +12,11 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 spring.main.allow-bean-definition-overriding=true
 
+#feign fallback enable
+feign.hystrix.enabled=true
+
+
+
 server.port=8082
 
 product.review.protocol = http
