fign and fallback related code

--- a/ProductService/src/main/resources/application.properties
+++ b/ProductService/src/main/resources/application.properties
@@ -31,6 +31,9 @@ eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 
 spring.application.name=product-service
+
+#liquibase
+spring.liquibase.enabled=false
  
 
 
