--- a/ProductService/src/test/resources/application.properties
+++ b/ProductService/src/test/resources/application.properties
@@ -5,3 +5,6 @@ spring.datasource.password=sa
 
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
+
+product.review.reviewservicename =review-service
+spring.liquibase.enabled=false
