--- a/Zuul_ApiGateway/src/main/resources/application.properties
+++ b/Zuul_ApiGateway/src/main/resources/application.properties
@@ -1,21 +1,12 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/auth_service?useSSL=false
+spring.datasource.username=root
+spring.datasource.password=root
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.properties.hibernate.format_sql=true
+
 spring.application.name=api-gateway
 server.port=9999
 
 spring.main.allow-bean-definition-overriding=true
-
-zuul.routes.review.path=/review/**
-zuul.routes.review.serviceId=review-service
-
-zuul.routes.product.path=/product/**
-zuul.routes.product.serviceId=product-service
-
-#zuul.routes.auth.path=/auth/**
-#zuul.routes.auth.serviceId=auth-service
-#zuul.routes.auth.strip-prefix=false
-
-## Exclude authorization from sensitive headers
-#zuul.routes.auth-service.sensitive-headers=Cookie,Set-Cookie
-
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
-eureka.client.register-with-eureka=true
-eureka.client.fetch-registry=true
